# jarvis

./: AGENTS.md  README.md  architecture-spec.md  architecture.md  domain-architecture.md  pyproject.toml
client/: audio.py  streamer.py  vad.py  wakeword.py
docs/: audio.md  vad.md  wakeword.md
server/: entrypoint.py
server/inference/: embeddings.py  llm.py  queue.py
server/memory/: db_handler.py
server/orchestrators/: conversation_orchestrator.py
server/tools/: executor.py  registry.py
